--- a/caddy/index.html
+++ b/caddy/index.html
@@ -15,5 +15,6 @@
   <h1>MonSec Cloud Stream</h1>
   <p><a href="/obs/">OBS</a></p>
   <p><a href="/remote/">OBS Remote</a></p>
+  <p><a href="/netdata/">Monitoring</a></p>
 </body>
 </html>
